[package]
name = "the_basement"
version = "0.1.0"
description = "Solana-based yield farming system that efficiently distributes user deposits into liquidity pools"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "the_basement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
pyth-sdk-solana = "0.7.0" 